auto pairs and html tags close

--- a/README.org
+++ b/README.org
@@ -6,7 +6,7 @@
   - [[#syntax-and-lsp][Syntax and lsp]]
   - [[#utils][Utils]]
   - [[#vim-plug-finish][vim-plug finish]]
-- [[#general-theres-stuff-here-to-be-moved][General (theres stuff here to be moved)]]
+- [[#general][General]]
 - [[#ui-1][UI]]
   - [[#theme][Theme]]
   - [[#tabline][Tabline]]
@@ -99,8 +99,8 @@ call plug#begin('~/.config/nvim/autoload/plugged')
     " Git
     Plug 'tpope/vim-fugitive'
 
-    " Closetags
-    " Plug 'alvan/vim-closetag'
+    " Closetags and pairs <></> ,{},"", etc
+       Plug 'tmsvg/pear-tree'
 
     " undo tree
     Plug 'mbbill/undotree'
@@ -112,9 +112,6 @@ call plug#begin('~/.config/nvim/autoload/plugged')
     Plug 'easymotion/vim-easymotion'
     " Plug 'justinmk/vim-sneak'
     " Plug 'unblevable/quick-scope'
-
-    " Auto pairs for '(' '[' '{'
-    Plug 'jiangmiao/auto-pairs'
 
     " Multiple cursors
     " Plug 'terryma/vim-multiple-cursors'
@@ -179,7 +176,7 @@ autocmd VimEnter *
     \|   PlugInstall --sync | q
     \| endif
 #+END_SRC
-* General (theres stuff here to be moved)
+* General
 #+BEGIN_SRC vimrc :tangle init.vim
 set iskeyword+=-                      	" treat dash separated words as a word text object"
 "set formatoptions-=cro                  " Stop newline continution of comments
@@ -736,50 +733,57 @@ let g:indentLine_setColors = 0
 
 #+END_SRC
 ** Close html tags
-at the moment im testing my own implementation but this are the settings for the plugin
+plugin settings
 #+BEGIN_SRC vimrc :tangle init.vim
-" " filenames like *.xml, *.html, *.xhtml, ...
-" " These are the file extensions where this plugin is enabled.
-" "
-" let g:closetag_filenames = '*.html,*.xhtml,*.phtml,*.js,*.jsx,*.ts,*.tsx'
+    " Default rules for matching:
+let g:pear_tree_pairs = {
+            \ '(': {'closer': ')'},
+            \ '[': {'closer': ']'},
+            \ '{': {'closer': '}'},
+            \ "'": {'closer': "'"},
+            \ '"': {'closer': '"'},
+            \ '`': {'closer': '`'},
+            \ '<*>': {'closer' : '</*>',
+            \         'not_if': ['br', 'hr', 'img', 'input', 'link', 'meta',
+            \                    'area', 'base', 'col', 'command', 'embed',
+            \                    'keygen', 'param', 'source', 'track', 'wbr'],
+            \         'not_like': '/$',
+            \         'not_in': ['typescriptTypeReference', 'TypeReference','String']
+            \        }
+            \ }
+" See pear-tree/after/ftplugin/ for filetype-specific matching rules
 
-" " filenames like *.xml, *.xhtml, ...
-" " This will make the list of non-closing tags self-closing in the specified files.
-" "
-" let g:closetag_xhtml_filenames = '*.xhtml,*.jsx,*.js,*.tsx,*.ts'
+" Pear Tree is enabled for all filetypes by default:
+let g:pear_tree_ft_disabled = []
 
-" " filetypes like xml, html, xhtml, ...
-" " These are the file types where this plugin is enabled.
-" "
-" " let g:closetag_filetypes = 'html,xhtml,phtml'
+" Pair expansion is dot-repeatable by default:
+let g:pear_tree_repeatable_expand = 1
 
-" " filetypes like xml, xhtml, ...
-" " This will make the list of non-closing tags self-closing in the specified files.
-" "
-" let g:closetag_filetypes = 'html,xhtml,phtml,javascript,javascriptreact,javascript.jsx,typescript,typescriptreact,typescript.tsx,javascript.js,typescript.jsx'
+" Smart pairs are disabled by default:
+let g:pear_tree_smart_openers = 0
+let g:pear_tree_smart_closers = 0
+let g:pear_tree_smart_backspace = 0
 
-" " integer value [0|1]
-" " This will make the list of non-closing tags case-sensitive (e.g. `<Link>` will be closed while `<link>` won't.)
-" "
-" let g:closetag_emptyTags_caseSensitive = 0
+" If enabled, smart pair functions timeout after 60ms:
+let g:pear_tree_timeout = 60
 
-" " dictionary
-" " Disables auto-close if not in a "valid" region (based on filetype)
-" "
-" " let g:closetag_regions = {
-" "     \ 'typescript.tsx': 'jsxRegion,tsxRegion',
-" "     \ 'javascript.jsx': 'jsxRegion',
-" "     \ 'javascript': '',
-" "     \ 'javascriptreact': '',
-" "     \ }
+" Automatically map <BS>, <CR>, and <Esc>
+let g:pear_tree_map_special_keys = 1
 
-" " autocmd BufNewFile,BufRead *.js,*.ts
-" "       \ set filetype=typescript.tsx |
-" "       \ set syntax=typescriptreact
+" Default mappings:
+imap <BS> <Plug>(PearTreeBackspace)
+imap <CR> <Plug>(PearTreeExpand)
+imap <Esc> <Plug>(PearTreeFinishExpansion)
+" Pear Tree also makes <Plug> mappings for each opening and closing string.
+"     :help <Plug>(PearTreeOpener)
+"     :help <Plug>(PearTreeCloser)
 
-" " Shortcut for closing tags, default is '>'
-" "
-" let g:closetag_shortcut='>'
+" Not mapped by default:
+" <Plug>(PearTreeSpace)
+" <Plug>(PearTreeJump)
+" <Plug>(PearTreeExpandOne)
+" <Plug>(PearTreeJNR)
+
 #+END_SRC
 ** Color parenthesis
 settings for the plugin
@@ -1214,6 +1218,7 @@ let g:vista_icon_indent = ["╰─▸ ", "├─▸ "]
 
 #+END_SRC
 ** Interactive code
+i might get rid of this.
 #+BEGIN_SRC vimrc :tangle init.vim
 " Change the color
 highlight CodiVirtualText guifg=red
