--- a/README.org
+++ b/README.org
@@ -256,10 +256,6 @@ set nowritebackup                       " This is recommended by coer
 Set the theme here and comment/uncomment individual configs below
 #+BEGIN_SRC vimrc :tangle init.vim
     colorscheme ayu
-    " popup menu (coc autocomplete)
-    hi Pmenu     guifg=#ffffff guibg=#393939
-    hi PmenuSel  guifg=#ffffff guibg=#666666
-
 #+END_SRC
 *** ayu theme
 Great theme lots of contrast in every version
@@ -375,6 +371,40 @@ let g:airline_mode_map = {
 #+END_SRC
 * Key bindings
 ** maps
+|---------+--------+--------------------+--------------------------------------|
+| Mode    | Keys   | Mnemonic           | Description                          |
+|---------+--------+--------------------+--------------------------------------|
+| Normal  | Ctrl+a | All                | Select All                           |
+| Normal  | Ctrl+s | Save               | Save                                 |
+| Normal  | Ctrl+h | hjkl               | Focus Left Window                    |
+| Normal  | Ctrl+j | hjkl               | Focus Down Window                    |
+| Normal  | Ctrl+k | hjkl               | Focus Up Window                      |
+| Normal  | Ctrl+l | hjkl               | Focus Right Window                   |
+| Normal  | Alt+h  | hjkl               | Resize Window                        |
+| Normal  | Alt+j  | hjkl               | Resize Window                        |
+| Normal  | Alt+k  | hjkl               | Resize Window                        |
+| Normal  | Alt+l  | hjkl               | Resize Window                        |
+| Normal  | bn     | Buffer Next        | Next Buffer                          |
+| Normal  | bp     | Buffer Previous    | Previous Buffer                      |
+| Normal  | bd     | Buffer Delete      | Delete Buffer                        |
+| Normal  | bl     | Buffer List        | List Buffer                          |
+| Normal  | B      | Beggining          | Moves to first non blanc char        |
+| Normal  | E      | End                | Moves to Last non blanc char         |
+| Normal  | gc     | Comment            | Comments                             |
+| Normal  | J      | Big j              | Moves cursor down 5 times - 5j       |
+| Normal  | K      | Big k              | Moves cursor up 5 times - 5k         |
+| Insert  | jk     | Home Row           | Escape                               |
+| Insert  | kj     | Home Row           | Escape                               |
+| Visual  | Ctrl+j | j = down           | Move Selection Down                  |
+| Visual  | Ctrl+k | k = up             | Move Selection Up                    |
+| Visual  | Ctrl+c | Copy               | Copy to clipboard                    |
+| Visual  | gc     | Comment            | Comments                             |
+| Command | Q      | quit               | Because I dont release Shift in time |
+| Command | W      | Write              | Because I dont release Shift in time |
+| Command | Wq     | Write and Quit     | Because I dont release Shift in time |
+| Command | WQ     | Write and Quit     | Because I dont release Shift in time |
+| Command | QQQ    | Write and Quit All | Write And Quit All                   |
+|---------+--------+--------------------+--------------------------------------|
 #+BEGIN_SRC vimrc :tangle init.vim
    " space is leader
 let mapleader=" "
@@ -393,87 +423,69 @@ noremap K 5k
 nnoremap B ^
 nnoremap E $
 
-" Better indenting
+" Better indenting in visual mode (indent and go back to visual sellection)
 vnoremap < <gv
 vnoremap > >gv
 
-  " quit and save with capitals Q W (sometimes i dont release shift in time)
-  :command! -bar -bang Q quit<bang>
-  :command! -bar -bang W write<bang>
-  :command! -bar -bang Wq wq<bang>
-  :command! -bar -bang WQ wq<bang>
-  :command! -bar -bang QQQ wqa<bang>
+" quit and save with capitals Q W (sometimes i dont release shift in time)
+:command! -bar -bang Q quit<bang>
+:command! -bar -bang W write<bang>
+:command! -bar -bang Wq wq<bang>
+:command! -bar -bang WQ wq<bang>
+:command! -bar -bang QQQ wqa<bang>
 
-  " Select all
-  nnoremap <C-a> ggVG
+" Select all
+nnoremap <C-a> ggVG
 
-  "next tab
-  noremap tn :tabn<CR>
-  " previous tab
-  noremap tp :tabp<CR>
-  " move tab (expects position number)
-  noremap tm :tabm
-  " new tab
-  noremap tt :tabnew
-  " split tab
-  noremap ts :tab split<CR>
-  " close tab
-  noremap tc :tabc<CR>
+"Comment
+nnoremap gc :call NERDComment('n','toggle')<CR>
+vnoremap gc :call NERDComment('x','toggle')<CR>gv
 
-  "next buffer
-  noremap bn :bn<CR>
-  " previous buffer
-  noremap bp :bp<CR>
-  " delete buffer
-  noremap bd :bd<CR>
-  " list buffers
-  noremap bl :Buffer<CR>
+"next buffer
+noremap bn :bn<CR>
+" previous buffer
+noremap bp :bp<CR>
+" delete buffer
+noremap bd :bd<CR>
+" list buffers
+noremap bl :Buffer<CR>
 
-  " I hate escape more than anything else
-  inoremap jk <Esc>
-  inoremap kj <Esc>
+" I hate escape more than anything else
+inoremap jk <Esc>
+inoremap kj <Esc>
 
-  " Alternate way to save
-  nnoremap <silent> <C-s> :w<CR>
-  " Alternate way to quit
-  nnoremap <silent> <C-Q> :wq!<CR>
+" Alternate way to save
+nnoremap <silent> <C-s> :w<CR>
+" Alternate way to quit
+nnoremap <silent> <C-Q> :wq!<CR>
 
-  " Better window navigation
-  nnoremap <C-h> <C-w>h
-  nnoremap <C-j> <C-w>j
-  nnoremap <C-k> <C-w>k
-  nnoremap <C-l> <C-w>l
+" Better window navigation
+nnoremap <C-h> <C-w>h
+nnoremap <C-j> <C-w>j
+nnoremap <C-k> <C-w>k
+nnoremap <C-l> <C-w>l
 
-  " Use alt + hjkl to resize windows
-  nnoremap <silent> <M-j>    :resize -2<CR>
-  nnoremap <silent> <M-k>    :resize +2<CR>
-  nnoremap <silent> <M-h>    :vertical resize -2<CR>
-  nnoremap <silent> <M-l>    :vertical resize +2<CR>
+" Use alt + hjkl to resize windows
+nnoremap <silent> <M-j>    :resize -2<CR>
+nnoremap <silent> <M-k>    :resize +2<CR>
+nnoremap <silent> <M-h>    :vertical resize -2<CR>
+nnoremap <silent> <M-l>    :vertical resize +2<CR>
 
-  nmap f <Plug>(easymotion-fl)
-  nmap F <Plug>(easymotion-Fl)
-  nmap t <Plug>(easymotion-tl)
-  nmap T <Plug>(easymotion-Tl)
-  nmap s <Plug>(easymotion-bd-w)
+nmap f <Plug>(easymotion-fl)
+nmap F <Plug>(easymotion-Fl)
+nmap t <Plug>(easymotion-tl)
+nmap T <Plug>(easymotion-Tl)
+nmap s <Plug>(easymotion-bd-w)
 
-  " move selecction on visual mode
-  vnoremap <C-j> :m '>+1<CR>gv=gv
-  vnoremap <C-k> :m '<-2<CR>gv=gv
+" move selecction on visual mode
+vnoremap <C-j> :m '>+1<CR>gv=gv
+vnoremap <C-k> :m '<-2<CR>gv=gv
 
-  " copy with ctrl-c
-  vnoremap <C-c> :w !xsel -i -b <CR><CR>
-
-  " close <tags></tags>
-  " inoremap ><Tab> ><Esc>F<lyt>o</<C-r>"><Esc>O<Space>
-  " inoremap ><Tab>  ><Esc>F<lyt>f>a</<C-r>"><Esc>F>a
-  " inoremap <C-t> <Esc>F<lywf>a</<C-r>"><Esc>F>a
-  " exit insert, search bck <,move right, yank w, search >, insert </ paste yank, insert >, exit inster, search back <, clear search highlight, enter insert
-  inoremap <C-t> <Esc>?<<cr>lyW/><cr>a</<C-r>"><Esc>?><cr>:noh<cr>a
-  " nmap <silent><leader>c %lyWh%a</<C-r>"<Bs>><Esc>%i
+" copy with ctrl-c
+vnoremap <C-c> :w !xsel -i -b <CR><CR>
 
 #+END_SRC
 
-#+END_SRC
 ** whichkey
 *** Config
 #+BEGIN_SRC vimrc :tangle init.vim
@@ -626,19 +638,19 @@ let g:which_key_map['a'] = {
   \ }
 #+END_SRC
 *** Buffer - Submenu (b)
-|-----------+----------+----------------------|
-| Key       | Mnemonic | Description          |
-|-----------+----------+----------------------|
-| "/"       |          | Find Buffer          |
-| "d"       | Delete   | Delete Buffer        |
-| "D"       | Delete   | Delete all Buffers   |
-| "f"       | First    | First Buffer         |
-| "k"       | Kill     | Delete Other buffers |
-| "l"       | Last     | Last Buffer          |
-| "n"       | Next     | Next Buffer          |
-| "N"       | New      | New Empty Buffer     |
-| "p"       | Previous | Previous Buffer      |
-|-----------+----------+----------------------|
+|-----+----------+----------------------|
+| Key | Mnemonic | Description          |
+|-----+----------+----------------------|
+| "/" |          | Find Buffer          |
+| "d" | Delete   | Delete Buffer        |
+| "D" | Delete   | Delete all Buffers   |
+| "f" | First    | First Buffer         |
+| "k" | Kill     | Delete Other buffers |
+| "l" | Last     | Last Buffer          |
+| "n" | Next     | Next Buffer          |
+| "N" | New      | New Empty Buffer     |
+| "p" | Previous | Previous Buffer      |
+|-----+----------+----------------------|
 #+BEGIN_SRC vimrc :tangle init.vim
 " Buffers submenu
 let g:which_key_map['b'] = {
