ayu theme colors

--- a/README.org
+++ b/README.org
@@ -260,9 +260,13 @@ Set the theme here and comment/uncomment individual configs below
 *** ayu theme
 Great theme lots of contrast in every version
 #+BEGIN_SRC vimrc :tangle init.vim
- let ayucolor='dark'
+let ayucolor='dark'
+ "mirage setings
+    hi CursorLine guibg=#1f262a
+    hi CursorColumn guibg=#1f262a
 "let ayucolor='mirage'
 "let ayucolor='light'
+
 
 #+END_SRC
 *** gruvbox
