maximizer,debug,autogroups

--- a/README.org
+++ b/README.org
@@ -12,10 +12,11 @@
   - [[#tabline][Tabline]]
   - [[#modeline][Modeline]]
 - [[#key-bindings][Key bindings]]
-  - [[#maps][maps]]
-  - [[#whichkey][whichkey]]
+  - [[#maps][Maps]]
+  - [[#whichkey][Whichkey]]
 - [[#editor][Editor]]
   - [[#comments][Comments]]
+  - [[#maximizer][Maximizer]]
   - [[#text-navigation][Text navigation]]
   - [[#indent-guides][Indent guides]]
   - [[#close-html-tags][Close html tags]]
@@ -26,6 +27,7 @@
   - [[#scratch-buffer][Scratch Buffer]]
 - [[#development][Development]]
   - [[#lsp][LSP]]
+  - [[#debugger][Debugger]]
 
 * Plugins
 ** Install vim-plug plugin manager
@@ -92,6 +94,12 @@ call plug#begin('~/.config/nvim/autoload/plugged')
 #+END_SRC
 ** Utils
 #+BEGIN_SRC vimrc :tangle init.vim
+    " Debugger
+    Plug 'puremourning/vimspector'
+
+    " Maximize window
+    Plug 'szw/vim-maximizer'
+
     "Search for unicode
     Plug 'chrisbra/unicode.vim'
 
@@ -140,7 +148,7 @@ call plug#begin('~/.config/nvim/autoload/plugged')
     "zen mode
     Plug 'junegunn/goyo.vim'
 
-    "vista
+    "Tagbar
     Plug 'liuchengxu/vista.vim'
 
     "change to project root
@@ -181,9 +189,10 @@ autocmd VimEnter *
 #+END_SRC
 * General
 #+BEGIN_SRC vimrc :tangle init.vim
+
 "wrapping  and tabs ============================="
-set wrap
-" set nowrap                              " Display long lines as just one line
+" set wrap
+set nowrap                              " Display long lines as just one line
 set linebreak
 set textwidth=0 wrapmargin=0
 set tabstop=2                           " Insert 2 spaces for a tab
@@ -192,9 +201,11 @@ set smarttab                            " Makes tabbing smarter will realize you
 set expandtab                           " Converts tabs to spaces
 set smartindent                         " Makes indenting smart
 set autoindent                          " Good auto indent
+
 "popup  menu ============================"
 set pumheight=10                        " Makes popup menu smaller
 set pumblend=35                         " Popup menu transparency
+
 "UI ============================"
 " set showtabline=2                         " always show tab bar
 set ruler              			            " Show the cursor position all the time
@@ -211,6 +222,7 @@ set signcolumn=yes                      " Always show the signcolumn, otherwise 
 set termguicolors
 " let $NVIM_TUI_ENABLE_TRUE_COLOR=1
 " set mmp=1300
+
 "Behaviour==========================
 set iskeyword+=-                      	" treat dash separated words as a word text object"
 "set formatoptions-=cro                  " Stop newline continution of comments
@@ -232,15 +244,7 @@ set updatetime=300                      " Faster completion
 set timeoutlen=300                      " By default timeoutlen is 1000 ms
 " set autochdir                           " Your working directory will always be the same as your working directory
 " set foldcolumn=2                        " Folding abilities
-" au! BufWritePost $MYVIMRC source %      " auto source when writing to init.vm alternatively you can run :source $MYVIMRC
-autocmd FileType * setlocal formatoptions-=c formatoptions-=r formatoptions-=o
-"file types
-autocmd BufRead,BufNewFile .eslintrc,.babelrc,.prettierrc set filetype=json
-autocmd BufRead,BufNewFile *.js,*.jsx set filetype=typescriptreact
-autocmd BufRead,BufNewFile *.ts,*.tsx set filetype=typescriptreact
-" open everything in tabs
-" autocmd VimEnter * tab all
-" autocmd BufAdd * exe 'tablast | tabe "' . expand( "<afile") .'"'
+
 " Backups and swap ============================
 " create swap dir if not exist
 if !isdirectory($HOME."/.config/nvim/swap")
@@ -249,6 +253,28 @@ endif
 set dir=~/.config/nvim/swap/           " tell vim where to put swap files
 set nobackup                            " This is recommended by coc
 set nowritebackup                       " This is recommended by coer
+
+  "Auto cmd ========================
+  "Trim Whitespace Function
+fun! TrimWhitespace()
+       let l:save = winsaveview()
+       keeppatterns %s/\s\+$//e
+       call winrestview(l:save)
+endfun
+
+augroup autogroup
+      au!
+    "Trim whitespace
+    autocmd BufWritePre * : call TrimWhitespace()
+    " Format options
+    autocmd FileType * setlocal formatoptions-=c formatoptions-=r formatoptions-=o
+    "file types
+    autocmd BufRead,BufNewFile .eslintrc,.babelrc,.prettierrc set filetype=json
+    autocmd BufRead,BufNewFile *.js,*.jsx set filetype=typescriptreact
+    autocmd BufRead,BufNewFile *.ts,*.tsx set filetype=typescriptreact
+augroup END
+
+
 #+END_SRC
 
 * UI
@@ -374,7 +400,7 @@ let g:airline_mode_map = {
 
 #+END_SRC
 * Key bindings
-** maps
+** Maps
 |---------+--------+--------------------+--------------------------------------|
 | Mode    | Keys   | Mnemonic           | Description                          |
 |---------+--------+--------------------+--------------------------------------|
@@ -490,7 +516,7 @@ vnoremap <C-c> :w !xsel -i -b <CR><CR>
 
 #+END_SRC
 
-** whichkey
+** Whichkey
 *** Config
 #+BEGIN_SRC vimrc :tangle init.vim
 " Map leader to which_key
@@ -513,10 +539,10 @@ highlight default link WhichKeySeperator DiffAdded
 highlight default link WhichKeyGroup     Identifier
 highlight default link WhichKeyDesc      Function
 
-" Hide status line
-autocmd! FileType which_key
-autocmd  FileType which_key set laststatus=0 noshowmode noruler
-  \| autocmd BufLeave <buffer> set laststatus=2 noshowmode ruler
+    " Hide status line on which key
+    autocmd! FileType which_key
+    autocmd  FileType which_key set laststatus=0 noshowmode noruler
+    \| autocmd BufLeave <buffer> set laststatus=2 noshowmode ruler
 
 #+END_SRC
 *** Functions
@@ -754,12 +780,79 @@ let g:which_key_map.c['p'] = {
   \ }
 #+END_SRC
 *** Debug - Submenu (d)
-TODO
+|------+--------+------------+-----------------|
+| Keys | Prefix | Mnemonics  | Description     |
+|------+--------+------------+-----------------|
+| "b"  | Yes    | Breakpoint | Breakpoints     |
+| "c"  |        | Code       | Code Window     |
+| "d"  |        | Debug      | Launch/Continue |
+| "e"  |        | Eval       | Ballon Eval     |
+| "o"  |        | Output     | Output Window   |
+| "P"  |        | Pause      | Pause           |
+| "r"  | Yes    | Run        | Run             |
+| "R"  |        | Restart    | Restart         |
+| "s"  |        | Stack      | Stack Window    |
+| "S"  |        | Stop       | Stop            |
+| "t"  |        | Tag        | Tag Window      |
+| "v"  |        | Variable   | Variable Window |
+| "w"  |        | Watch      | Watch Window    |
+|------+--------+------------+-----------------|
 #+BEGIN_SRC vimrc :tangle init.vim
 " Debug submenu
-let g:which_key_map['D'] = {
-  \ 'name': '+Debug'
+let g:which_key_map['d'] = {
+  \ 'name': '+Debug',
+  \ 'c' : [':call win_gotoid(g:vimspector_session_windows.code) <CR>'            , 'Code Window'],
+  \ 'd' : ['<Plug>VimspectorContinue'                                       , 'Launch/Continue'],
+  \ 'e' : ['<Plug>VimspectorBalloonEval'                                    , 'Balloon Eval'],
+  \ 'o' : [':call win_gotoid(g:vimspector_session_windows.output)<CR>'          , 'Output Window'],
+  \ 'P' : ['<Plug>VimspectorPause'                                          , 'Pause'],
+  \ 'R' : ['<Plug>VimspectorRestart'                                        , 'Restart'],
+  \ 's' : [':call win_gotoid(g:vimspector_session_windows.stack_trace)<CR>'     , 'Stack Window'],
+  \ 'S' : ['<Plug>VimspectorStop'                                           , 'Stop'],
+  \ 't' : [':call win_gotoid(g:vimspector_session_windows.tagpage)<CR>'         , 'Tag Window'],
+  \ 'v' : [':call win_gotoid(g:vimspector_session_windows.variables)<CR>'       , 'Variable Window'],
+  \ 'w' : [':call win_gotoid(g:vimspector_session_windows.watches)<CR>'         , 'Watch Window']
   \ }
+#+END_SRC
+**** Debug - Run Submenu (dr)
+|------+----------+---------------|
+| Keys | Mnemonic | Description   |
+|------+----------+---------------|
+| "c"  | Cursor   | Run To Cursor |
+| "j"  | hjkl     | Step Over     |
+| "k"  | hjkl     | Step Out      |
+| "l"  | hjkl     | Step Into     |
+|------+----------+---------------|
+#+BEGIN_SRC vimrc :tangle init.vim
+" Debug Run Submenu
+let g:which_key_map.d['r'] ={
+  \ 'name' : '+Run',
+  \ 'c' : ['<Plug>VimspectorRunToCursor'                    , 'Run to Cursor'],
+  \ 'j' : ['<Plug>VimspectorStepOver'                       , 'Step Over'],
+  \ 'k' : ['<Plug>VimspectorStepOut'                        , 'Step Out'],
+  \ 'l' : ['<Plug>VimspectorStepInto'                       , 'Step Into']
+  \ }
+
+#+END_SRC
+**** Debug - Breakpoint Submenu (db)
+|------+-------------+------------------------|
+| Keys | Mnemonic    | Description            |
+|------+-------------+------------------------|
+| "b"  | Breakpoint  | Toggle Breakpoint      |
+| "c"  | Conditional | Conditional Breakpoint |
+| "C"  | Clean       | Clean                  |
+| "f"  | Functional  | Functional Breakpoint  |
+|------+-------------+------------------------|
+#+BEGIN_SRC vimrc :tangle init.vim
+" Debug Breakpoint Submenu
+let g:which_key_map.d['b'] ={
+  \ 'name' : '+Breakpoints',
+  \ 'b' : ['<Plug>VimspectorToggleBreakpoint'               , 'Toggle Breakpoint'],
+  \ 'c' : ['<Plug>VimspectorToggleConditionalBreakpoint'    , 'Toggle Conditional Breakpoint'],
+  \ 'C' : [':call vimspector#ClearBreakpoints()<CR>'        , 'Clean'],
+  \ 'f' : ['<Plug>VimspectorAddFunctionBreakpoint'          , 'Functional Breakpoint']
+  \ }
+
 #+END_SRC
 *** File - Submenu (f)
 - TODO Copy File Path, Yank File Path, Find Globaly, Move File
@@ -1019,7 +1112,7 @@ let g:which_key_map['T'] ={
   \ 'T' : [':hi Normal ctermbg=NONE guibg=NONE<CR>' , 'Transparent Background'],
   \ 'p' : [':RainbowToggle'                         , 'Color Parenthesis'],
   \ 'w' : [':set wrap!'                             , 'Wrap'],
-  \ 'z' : [':Goyo'                                  , 'Zen Mode']
+  \ 'z' : [':Goyo! 70%x90%'                                  , 'Zen Mode']
   \ }
 #+END_SRC
 *** Window - SubMenu (w)
@@ -1095,6 +1188,12 @@ let g:NERDTrimTrailingWhitespace = 1
 
 " Enable NERDCommenterToggle to check all selected lines is commented or not
 let g:NERDToggleCheckAllLines = 1
+#+END_SRC
+** Maximizer
+#+BEGIN_SRC vimrc :tangle init.vim
+let g:maximizer_restor_on_winleave=1
+let g:maximizer_set_default_mapping = 0
+let g:maximizer_set_mapping_with_bang = 0
 #+END_SRC
 ** Text navigation
 Settings for easymotion plugin
@@ -1477,4 +1576,9 @@ nmap <silent> ]g <Plug>(coc-diagnostic-next)
 
   nmap <C-LeftRelease>  <Plug>(coc-cursors-position)
   " nmap <M-LeftRelease> <Plug>(coc-cursors-word)
+#+END_SRC
+** Debugger
+#+BEGIN_SRC vimrc :tangle init.vim
+let g:vimspector_install_gadgets = ['debugger-for-chrome','vscode-node-debug2']
+let g:vimspector_base_dir=expand( '$HOME/.config/nvim/vimspector-config' )
 #+END_SRC
