Installed org-mode

--- a/README.org
+++ b/README.org
@@ -5,6 +5,7 @@
   - [[#ui][UI]]
   - [[#syntax-and-lsp][Syntax and lsp]]
   - [[#utils][Utils]]
+  - [[#org-mode][Org mode]]
   - [[#vim-plug-finish][vim-plug finish]]
 - [[#general][General]]
 - [[#ui-1][UI]]
@@ -77,6 +78,15 @@ call plug#begin('~/.config/nvim/autoload/plugged')
     Plug 'dikiaap/minimalist'
     Plug 'tomasr/molokai'
     Plug 'gosukiwi/vim-atom-dark'
+
+    " ident guides
+    " Plug 'nathanaelkane/vim-indent-guides'
+    " Plug 'thaerkh/vim-indentguides'
+    Plug 'Yggdroot/indentLine'
+
+    " color parenthesis
+    " Plug 'junegunn/rainbow_parentheses.vim'
+    Plug 'frazrepo/vim-rainbow'
 #+END_SRC
 ** Syntax and lsp
 #+BEGIN_SRC vimrc :tangle init.vim
@@ -161,15 +171,6 @@ call plug#begin('~/.config/nvim/autoload/plugged')
     "key mappings
     Plug 'liuchengxu/vim-which-key'
 
-    " ident guides
-    " Plug 'nathanaelkane/vim-indent-guides'
-    " Plug 'thaerkh/vim-indentguides'
-    Plug 'Yggdroot/indentLine'
-
-    " color parenthesis
-    " Plug 'junegunn/rainbow_parentheses.vim'
-    Plug 'frazrepo/vim-rainbow'
-
     " sessions
     " Plug 'thaerkh/vim-workspace'
     Plug 'mhinz/vim-startify'
@@ -177,8 +178,12 @@ call plug#begin('~/.config/nvim/autoload/plugged')
     "snippets
     Plug 'dsznajder/vscode-es7-javascript-react-snippets', { 'do': 'yarn install --frozen-lockfile && yarn compile' }
 #+END_SRC
+** Org mode
+#+BEGIN_SRC vimrc :tangle init.vim
+    "Org mode
+    Plug 'jceb/vim-orgmode'
+#+END_SRC
 ** vim-plug finish
-
 #+BEGIN_SRC vimrc :tangle init.vim
 call plug#end()
 " Automatically install missing plugins on startup
@@ -208,13 +213,14 @@ set pumblend=35                         " Popup menu transparency
 
 "UI ============================"
 " set showtabline=2                         " always show tab bar
-set ruler              			            " Show the cursor position all the time
+set ruler                              " Show the cursor position all the time
 set cmdheight=2                         " More space for displaying messages
 set t_Co=256                            " Support 256 colors
 set number relativenumber               " relative numbers
 set nu rnu                              " current line number
 set cursorline                          " Enable highlighting of the current line
 set cursorcolumn
+set scrolloff=5
 set laststatus=2                        " Always display the status line
 set noshowmode                          " We don't need to see things like -- INSERT -- anymore
 set signcolumn=yes                      " Always show the signcolumn, otherwise it would shift the text each time
@@ -253,6 +259,10 @@ endif
 set dir=~/.config/nvim/swap/           " tell vim where to put swap files
 set nobackup                            " This is recommended by coc
 set nowritebackup                       " This is recommended by coer
+
+" load all help
+packloadall
+silent! helptags ALL
 
   "Auto cmd ========================
   "Trim Whitespace Function
@@ -436,8 +446,6 @@ let g:airline_mode_map = {
 | Command | QQQ    | Write and Quit All | Write And Quit All                   |
 |---------+--------+--------------------+--------------------------------------|
 #+BEGIN_SRC vimrc :tangle init.vim
-   " space is leader
-let mapleader=" "
 
 "no arrow key for training with hjkl
 map <up> <nop>
@@ -519,9 +527,17 @@ vnoremap <C-c> :w !xsel -i -b <CR><CR>
 ** Whichkey
 *** Config
 #+BEGIN_SRC vimrc :tangle init.vim
+" space is leader
+" let mapleader=" "
+let g:mapleader = "\<Space>"
+" , is local leader
+let g:maplocalleader = '-'
 " Map leader to which_key
 nnoremap <silent> <leader> :silent WhichKey '<Space>'<CR>
 vnoremap <silent> <leader> :silent <c-u> :silent WhichKeyVisual '<Space>'<CR>
+" Map local leader to which kwy
+nnoremap <silent> <localleader> :<c-u>WhichKey  '-'<CR>
+
 
 " Create map to add keys to
 let g:which_key_map =  {}
