--- a/README.org
+++ b/README.org
@@ -29,6 +29,10 @@
 - [[#development][Development]]
   - [[#lsp][LSP]]
   - [[#debugger][Debugger]]
+  - [[#git][Git]]
+- [[#org-mode-1][Org mode]]
+  - [[#vim-orgmode][vim-orgmode]]
+  - [[#dotoo][dotoo]]
 
 * Plugins
 ** Install vim-plug plugin manager
@@ -60,6 +64,8 @@ call plug#begin('~/.config/nvim/autoload/plugged')
 
     " Icons
     Plug 'ryanoasis/vim-devicons'
+    "lua fork of devicons
+    Plug 'kyazdani42/nvim-web-devicons'
 
     " themes
     Plug 'itchyny/landscape.vim'
@@ -167,6 +173,11 @@ call plug#begin('~/.config/nvim/autoload/plugged')
     "fzf
     Plug 'junegunn/fzf', { 'do': { -> fzf#install() } }
     Plug 'junegunn/fzf.vim'
+       " Telescope
+    Plug 'nvim-lua/popup.nvim'
+    Plug 'nvim-lua/plenary.nvim'
+    Plug 'nvim-telescope/telescope.nvim'
+
 
     "key mappings
     Plug 'liuchengxu/vim-which-key'
@@ -182,15 +193,24 @@ call plug#begin('~/.config/nvim/autoload/plugged')
 #+BEGIN_SRC vimrc :tangle init.vim
     "Org mode
     Plug 'jceb/vim-orgmode'
+    Plug 'dhruvasagar/vim-dotoo'
+    Plug 'dhruvasagar/vim-table-mode'
+    "speed dating (for orgmode)
+    Plug 'tpope/vim-speeddating'
+
 #+END_SRC
 ** vim-plug finish
 #+BEGIN_SRC vimrc :tangle init.vim
 call plug#end()
 " Automatically install missing plugins on startup
-autocmd VimEnter *
-    \  if len(filter(values(g:plugs), '!isdirectory(v:val.dir)'))
-    \|   PlugInstall --sync | q
-    \| endif
+ augroup InstallPlugins
+    autocmd! InstallPlugins
+    autocmd VimEnter *
+        \  if len(filter(values(g:plugs), '!isdirectory(v:val.dir)'))
+        \|   PlugInstall --sync | q
+        \| endif
+augroup END
+
 #+END_SRC
 * General
 #+BEGIN_SRC vimrc :tangle init.vim
@@ -199,7 +219,8 @@ autocmd VimEnter *
 " set wrap
 set nowrap                              " Display long lines as just one line
 set linebreak
-set textwidth=0 wrapmargin=0
+set textwidth=80 wrapmargin=0
+set colorcolumn=+1                     " show column no 81(textwidth +1)
 set tabstop=2                           " Insert 2 spaces for a tab
 set shiftwidth=2                        " Change the number of space characters inserted for indentation
 set smarttab                            " Makes tabbing smarter will realize you have 2 vs 4
@@ -220,7 +241,8 @@ set number relativenumber               " relative numbers
 set nu rnu                              " current line number
 set cursorline                          " Enable highlighting of the current line
 set cursorcolumn
-set scrolloff=5
+set scrolloff=5                         " Always see 5 lines under cursor when scrolling
+set sidescrolloff=15                    " Always see 15 columns at the sides of the cursor
 set laststatus=2                        " Always display the status line
 set noshowmode                          " We don't need to see things like -- INSERT -- anymore
 set signcolumn=yes                      " Always show the signcolumn, otherwise it would shift the text each time
@@ -250,6 +272,9 @@ set updatetime=300                      " Faster completion
 set timeoutlen=300                      " By default timeoutlen is 1000 ms
 " set autochdir                           " Your working directory will always be the same as your working directory
 " set foldcolumn=2                        " Folding abilities
+" set foldmethod=indent
+" set foldmethod=syntax
+set foldmethod=manual       "select the text and zf is the best way with this method
 
 " Backups and swap ============================
 " create swap dir if not exist
@@ -570,6 +595,14 @@ function! Coc_show_documentation()
     call CocAction('doHover')
   endif
 endfunction
+
+"Close all buffers with fifletype
+" function! BDExt(ext)
+"   let buffers = filter(range(1, bufnr('$')), 'buflisted(v:val) && bufname(v:val) =~ "\.'.a:ext.'$"')
+"   if empty(buffers) |throw "no *.".a:ext." buffer" | endif
+"   exe 'bd '.join(buffers, ' ')
+" endfunction
+
 #+END_SRC
 *** Top Layer
 TODO: fin files globaly, maximize(requires plugin)
@@ -624,7 +657,7 @@ let g:which_key_map['e'] = [':CocCommand explorer'                           ,'F
 let g:which_key_map['h'] = ['<C-W>s'                                        ,'Split Below']
 let g:which_key_map['j'] = ['<Plug>(easymotion-bd-w)'                       ,'Jump to Word' ]
 let g:which_key_map['J'] = ['<Plug>(easymotion-s2)'                         ,'Jump With 2 Chars' ]
-"TODO let g:which_key_map['m'] = ['XXXXXXX'                         ,'Maximize' ]
+let g:which_key_map['m'] = [':MaximizerToggle'                         ,'Maximize' ]
 let g:which_key_map['o'] = ['append(line("."),   repeat([""], v:count1))'   ,'Line Below' ]
 let g:which_key_map['O'] = ['append(line(".")-1,   repeat([""], v:count1))' ,'Line Above' ]
 let g:which_key_map['p'] = ['Files'                                         ,'Search File Local' ]
@@ -795,7 +828,7 @@ let g:which_key_map.c['p'] = {
   \ 'e' : ['<Plug>(coc-diagnostic-prev-error)'   , 'Previous Error']
   \ }
 #+END_SRC
-*** Debug - Submenu (d)
+*** Debug - Submenu (D)
 |------+--------+------------+-----------------|
 | Keys | Prefix | Mnemonics  | Description     |
 |------+--------+------------+-----------------|
@@ -815,7 +848,7 @@ let g:which_key_map.c['p'] = {
 |------+--------+------------+-----------------|
 #+BEGIN_SRC vimrc :tangle init.vim
 " Debug submenu
-let g:which_key_map['d'] = {
+let g:which_key_map['D'] = {
   \ 'name': '+Debug',
   \ 'c' : [':call win_gotoid(g:vimspector_session_windows.code) <CR>'            , 'Code Window'],
   \ 'd' : ['<Plug>VimspectorContinue'                                       , 'Launch/Continue'],
@@ -830,7 +863,7 @@ let g:which_key_map['d'] = {
   \ 'w' : [':call win_gotoid(g:vimspector_session_windows.watches)<CR>'         , 'Watch Window']
   \ }
 #+END_SRC
-**** Debug - Run Submenu (dr)
+**** Debug - Run Submenu (Dr)
 |------+----------+---------------|
 | Keys | Mnemonic | Description   |
 |------+----------+---------------|
@@ -841,7 +874,7 @@ let g:which_key_map['d'] = {
 |------+----------+---------------|
 #+BEGIN_SRC vimrc :tangle init.vim
 " Debug Run Submenu
-let g:which_key_map.d['r'] ={
+let g:which_key_map.D['r'] ={
   \ 'name' : '+Run',
   \ 'c' : ['<Plug>VimspectorRunToCursor'                    , 'Run to Cursor'],
   \ 'j' : ['<Plug>VimspectorStepOver'                       , 'Step Over'],
@@ -850,7 +883,7 @@ let g:which_key_map.d['r'] ={
   \ }
 
 #+END_SRC
-**** Debug - Breakpoint Submenu (db)
+**** Debug - Breakpoint Submenu (Db)
 |------+-------------+------------------------|
 | Keys | Mnemonic    | Description            |
 |------+-------------+------------------------|
@@ -861,7 +894,7 @@ let g:which_key_map.d['r'] ={
 |------+-------------+------------------------|
 #+BEGIN_SRC vimrc :tangle init.vim
 " Debug Breakpoint Submenu
-let g:which_key_map.d['b'] ={
+let g:which_key_map.D['b'] ={
   \ 'name' : '+Breakpoints',
   \ 'b' : ['<Plug>VimspectorToggleBreakpoint'               , 'Toggle Breakpoint'],
   \ 'c' : ['<Plug>VimspectorToggleConditionalBreakpoint'    , 'Toggle Conditional Breakpoint'],
@@ -1171,10 +1204,16 @@ let g:which_key_map['x'] ={
   \ 'X' : [':Scratch!'            , 'Open Clean Scrach Buffer']
   \ }
 #+END_SRC
+*** Localleader
+#+BEGIN_SRC vimrc :tangle init.vim
+let g:which_key_local_org_map = {}
+#+END_SRC
 *** load the maps
 #+BEGIN_SRC vimrc :tangle init.vim
 " Register which key map
 call which_key#register('<Space>', "g:which_key_map")
+call which_key#register('-', "g:which_key_local_org_map")
+
 #+END_SRC
 * Editor
 ** Comments
@@ -1354,11 +1393,6 @@ let g:turtlePoem = [
       \ ]
 let g:startify_custom_header = 'startify#center(g:turtlePoem)'
 
-
-" nnoremap <leader><leader>s :SSave!<CR>
-" nnoremap <leader><leader>d :SDelete!<CR>
-" nnoremap <leader><leader>S :Startify<CR>
-
 " highlight StartifyBracket ctermfg=240
 " highlight StartifyFooter  ctermfg=240
 highlight StartifyHeader  ctermfg=114 guifg=#87d787
@@ -1510,8 +1544,10 @@ nmap <silent> gr <Plug>(coc-references)
 " nnoremap <silent> <leader><leader>k :call <SID>show_documentation()<CR>
 
 " Highlight the symbol and its references when holding the cursor.
-autocmd CursorHold * silent call CocActionAsync('highlight')
-
+augroup Coc
+    autocmd! Coc
+    autocmd CursorHold * silent call CocActionAsync('highlight')
+augroup END
 
 " Remap for do codeAction of selected region
 function! s:cocActionsOpenFromSelected(type) abort
@@ -1597,4 +1633,151 @@ nmap <silent> ]g <Plug>(coc-diagnostic-next)
 #+BEGIN_SRC vimrc :tangle init.vim
 let g:vimspector_install_gadgets = ['debugger-for-chrome','vscode-node-debug2']
 let g:vimspector_base_dir=expand( '$HOME/.config/nvim/vimspector-config' )
+#+END_SRC
+** Git
+#+BEGIN_SRC vimrc :tangle init.vim
+hi CocGitAddedSign guifg=#B8CC52 guibg=NONE
+hi CocGitChangedSign guifg=#36A3D9 guibg=NONE
+hi CocGitRemovedSign guifg=#bf0505 guibg=NONE
+#+END_SRC
+* Org mode
+** vim-orgmode
+#+BEGIN_SRC vimrc :tangle init.vim
+let g:org_todo_keywords = [['TODO(t)', 'DOING(d)', '|', 'DONE(D)']]
+
+let g:org_todo_keyword_faces = [['TODO', ' red'],['DOING','yellow'],['DONE','green']]
+let g:org_agenda_files = ['~/Documents/OrgFiles/projects.org']
+let g:org_heading_shade_leading_stars = 1
+
+" let g:org_todo_keyword_faces = [['WAITING', 'cyan'], ['CANCELED',
+"   \   [':foreground red', ':background black', ':weight bold',
+"   \   ':slant italic', ':decoration underline']]]
+
+#+END_SRC
+** dotoo
+#+BEGIN_SRC vimrc :tangle init.vim
+                  " This setting defines whether the leading stars of the headlines
+            " will be shaded. Set this to 0 if you don't want them to be shaded. >
+                let g:dotoo_headline_shade_leading_stars = 1
+
+            " This setting defines what the faces of various TODO states look
+            " like. >
+                let g:dotoo_todo_keyword_faces = [
+                  \ ['TODO', [':foreground 160', ':weight bold']],
+                  \ ['DOING', [':foreground 27', ':weight bold']],
+                  \ ['DONE', [':foreground 22', ':weight bold']],
+                  \ ]
+
+            " This setting defines various todo keywords to be recognized. A `|`
+            " separates final done states from others. >
+                let g:dotoo#parser#todo_keywords = [
+                  \ 'TODO',
+                  \ 'DOING',
+                  \ '|',
+                  \ 'DONE']
+
+
+            " This setting sets the warning period, so you're warned about TODOs
+            " that are due within the warning period from today. It is a string
+            " of the form '{number}[dmy]' where 'd' stands for day, 'm' for
+            " month, 'y' for year. >
+                let g:dotoo#agenda#warning_days = '30d'
+
+            " This setting is an array of files the agenda will read to show
+            " what's on the agenda within the warning days. They can include
+            " wildcards which will be expanded using |glob()| >
+                " let g:dotoo#agenda#files = ['~/Documents/dotoo-files/*.dotoo']
+                let g:dotoo#agenda#files = ['~/Documents/OrgFiles/projects.org']
+
+            " This setting defines whether the time_ago would output a short
+            " value near the closest years, months, days, hours, minutes or
+            " seconds or a long value with the full time ago. Set it to 1 to see
+            " a short time ago. >
+                let g:dotoo#time#time_ago_short = 0
+
+            " This setting defines the default refile file where the capture
+            " captures templates into. >
+                let g:dotoo#capture#refile = expand('~/Documents/dotoo-files/refile.dotoo')
+
+            " This setting enables clocking while capturing. >
+                let g:dotoo#capture#clock = 1
+
+            " This setting defines the capture templates the capture menu uses. >
+                let g:dotoo#capture#templates = {
+                      \ 't': {
+                      \   'description': 'Todo',
+                      \   'lines': [
+                      \     '* TODO %?',
+                      \     'DEADLINE: [%(strftime(g:dotoo#time#datetime_format))]'
+                      \   ],
+                      \  'target': 'refile:Tasks'
+                      \ },
+                      \ 'n': {
+                      \   'description': 'Note',
+                      \   'lines': ['* %? :NOTE:'],
+                      \ },
+                      \ 'm': {
+                      \   'description': 'Meeting',
+                      \   'lines': ['* MEETING with %? :MEETING:'],
+                      \ },
+                      \ 'p': {
+                      \   'description': 'Phone call',
+                      \   'lines': ['* PHONE %? :PHONE:'],
+                      \ },
+                      \ 'h': {
+                      \   'description': 'Habit',
+                      \   'lines': [
+                      \     '* NEXT %?',
+                      \     'SCHEDULED: [%(strftime(g:dotoo#time#date_day_format)) +1m]',
+                      \     ':PROPERTIES:',
+                      \     ':STYLE: habit',
+                      \     ':REPEAT_TO_STATE: NEXT',
+                      \     ':END:'
+                      \   ]
+                      \ }
+                      \}
+
+            " Templates are represented by a dictionary where the key is the
+            " short_key used to select the template from the capture menu.
+
+            " It has the following structure
+
+            " ,* `description` provides a human friendly explanation of what this
+            "    template represents
+            " ,* `lines` is a list for each line of the template. You can use
+            "    `%?` as a placeholder for where the cursor will be while editing
+            "    the template immidiately after selecting it and `%(...)` to
+            "    inline viml code that will be evaluated.
+            " ,* `target` defines the target for  this capture template should be
+            "    saved to, it can either be a dotoo file path or a dotoo move
+            "    target such as `todo:Tasks` which represents a dotoo file
+            "    headline to use as the parent for this captured headline.
+
+            " For easier customization this allows you to be able to add new or
+            " override the provided templates easily. >
+                let g:dotoo#capture#templates = {
+                      \ 't': {
+                      \   'target': 'refile-personal:Todos'
+                      \ }
+                      \}
+
+                " Or add new template
+                let g:dotoo#capture#templates = {
+                      \ 'x': {
+                      \   'description': 'eXtra template',
+                      \   'lines': ['* eXtra %? :EXTRA:'],
+                      \ }
+                      \}
+
+                " Or both
+                let g:dotoo#capture#templates = {
+                      \ 't': {
+                      \   'target': 'refile-personal:Todos'
+                      \ },
+                      \ 'x': {
+                      \   'description': 'eXtra template',
+                      \   'lines': ['* eXtra %? :EXTRA:'],
+                      \ }
+                      \}
+
 #+END_SRC
