--- a/README.org
+++ b/README.org
@@ -26,6 +26,7 @@
   - [[#project-management][Project management]]
   - [[#ranger][ranger]]
   - [[#scratch-buffer][Scratch Buffer]]
+  - [[#terminal][Terminal]]
 - [[#development][Development]]
   - [[#lsp][LSP]]
   - [[#debugger][Debugger]]
@@ -1422,6 +1423,25 @@ Pluggin Settings
    let g:scratch_horizontal = 1
    " let g:scratch_persistence_file '.scratch.vim' "Project based scratch
    let g:scratch_persistence_file = '~/.config/nvim/scratch.vim' " Global Scratch
+#+END_SRC
+** Terminal
+#+BEGIN_SRC vimrc :tangle init.vim
+" let g:floaterm_wintype='normal'
+" let g:floaterm_height=6
+
+let g:floaterm_keymap_toggle = '<F1>'
+let g:floaterm_keymap_next   = '<F2>'
+let g:floaterm_keymap_prev   = '<F3>'
+let g:floaterm_keymap_new    = '<F4>'
+
+" Floaterm
+let g:floaterm_gitcommit='floaterm'
+let g:floaterm_autoinsert=1
+let g:floaterm_width=0.8
+let g:floaterm_height=0.8
+let g:floaterm_wintitle=0
+let g:floaterm_autoclose=1
+
 #+END_SRC
 * Development
 ** LSP
