--- a/README.org
+++ b/README.org
@@ -20,7 +20,7 @@
   - [[#maximizer][Maximizer]]
   - [[#text-navigation][Text navigation]]
   - [[#indent-guides][Indent guides]]
-  - [[#close-html-tags][Close html tags]]
+  - [[#close-pairs-and-html-tags][Close Pairs and HTML tags]]
   - [[#color-parenthesis][Color parenthesis]]
   - [[#undotree][Undotree]]
   - [[#project-management][Project management]]
@@ -1274,7 +1274,7 @@ let g:indentLine_enabled = 0
 let g:indentLine_setColors = 0
 
 #+END_SRC
-** Close html tags
+** Close Pairs and HTML tags
 plugin settings
 #+BEGIN_SRC vimrc :tangle init.vim
     " Default rules for matching:
@@ -1285,6 +1285,12 @@ let g:pear_tree_pairs = {
             \ "'": {'closer': "'"},
             \ '"': {'closer': '"'},
             \ '`': {'closer': '`'},
+            \ }
+" See pear-tree/after/ftplugin/ for filetype-specific matching rules
+
+augroup TypescriptPairs
+  autocmd! TypescriptPairs
+  autocmd FileType typescriptreact let b:pear_tree_pairs = extend(deepcopy(g:pear_tree_pairs), {
             \ '<*>': {'closer' : '</*>',
             \         'not_if': ['br', 'hr', 'img', 'input', 'link', 'meta',
             \                    'area', 'base', 'col', 'command', 'embed',
@@ -1292,8 +1298,9 @@ let g:pear_tree_pairs = {
             \         'not_like': '/$',
             \         'not_in': ['typescriptTypeReference', 'TypeReference','String']
             \        }
-            \ }
-" See pear-tree/after/ftplugin/ for filetype-specific matching rules
+            \ }, 'keep')
+augroup END
+
 
 " Pear Tree is enabled for all filetypes by default:
 let g:pear_tree_ft_disabled = []
@@ -1302,20 +1309,20 @@ let g:pear_tree_ft_disabled = []
 let g:pear_tree_repeatable_expand = 1
 
 " Smart pairs are disabled by default:
-let g:pear_tree_smart_openers = 0
-let g:pear_tree_smart_closers = 0
-let g:pear_tree_smart_backspace = 0
+let g:pear_tree_smart_openers = 1
+let g:pear_tree_smart_closers = 1
+let g:pear_tree_smart_backspace = 1
 
 " If enabled, smart pair functions timeout after 60ms:
 let g:pear_tree_timeout = 60
 
 " Automatically map <BS>, <CR>, and <Esc>
-let g:pear_tree_map_special_keys = 1
+let g:pear_tree_map_special_keys = 0
 
 " Default mappings:
 imap <BS> <Plug>(PearTreeBackspace)
-imap <CR> <Plug>(PearTreeExpand)
-imap <Esc> <Plug>(PearTreeFinishExpansion)
+" imap <CR> <Plug>(PearTreeExpand)
+" imap <Esc> <Plug>(PearTreeFinishExpansion)
 " Pear Tree also makes <Plug> mappings for each opening and closing string.
 "     :help <Plug>(PearTreeOpener)
 "     :help <Plug>(PearTreeCloser)
