--- a/README.org
+++ b/README.org
@@ -1671,6 +1671,9 @@ let g:vimspector_base_dir=expand( '$HOME/.config/nvim/vimspector-config' )
 hi CocGitAddedSign guifg=#B8CC52 guibg=NONE
 hi CocGitChangedSign guifg=#36A3D9 guibg=NONE
 hi CocGitRemovedSign guifg=#bf0505 guibg=NONE
+
+hi DiffChange guibg=#5CCFE6 guifg=#000000
+hi DiffAdd guibg=#BBE67E guifg=#000000
 #+END_SRC
 * Org mode
 ** vim-orgmode
